# Brickware-Engine

./: .gitignore  .gitmodules  Bounds.cpp  Bounds.h  BoxCollider.cpp  BoxCollider.h  Brickware-Engine.opensdf  Brickware-Engine.sdf  Brickware-Engine.sdf.REMOVED.git-id  Brickware-Engine.sln  Brickware-Engine.vcxproj  Brickware-Engine.vcxproj.filters  Brickware-Engine.zip.REMOVED.git-id  CMakeLists.txt  Camera.cpp  Camera.h  Collider.cpp  Collider.h  Component.cpp  Component.h  Doxyfile  FrustrumCollider.cpp  FrustrumCollider.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Input.cpp  Input.h  Light.cpp  Light.h  Main.cpp  Material.cpp  Material.h  MaterialD3D.cpp  MaterialGL.cpp  Matrix4.cpp  Matrix4.h  Mesh.cpp  Mesh.h  (+39 more)
BrickwareCore/: BrickwareCore.h  BrickwareCore.vcxproj  BrickwareCore.vcxproj.filters  CMakeLists.txt  ~AutoRecover.BrickwareCore.vcxproj
BrickwareCore/Debug/: vc120.idb
BrickwareCore/Debug/BrickwareCore.tlog/: BrickwareCore.lastbuildstate  BrickwareCore.write.1u.tlog  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
BrickwareCore/include/: Bounds.h  BoxCollider.h  BrickwareCore.h  BrickwareCoreDLL.h  Camera.h  Collider.h  Collision.h  Component.h  Debug.h  FrustumCollider.h  Game.h  GameObject.h  GameTime.h  Input.h  Light.h  Material.h  MaterialComponent.h  Mesh.h  MeshRenderer.h  Octree.h  PhysicsManager.h  PointLight.h  Primitive.h  PrimitiveManager.h  Rigidbody.h  Screen.h  Settings.h  Shader.h  SphereCollider.h  Texture.h  Transform.h  Triangle.h  Utils.h  dxerr.h
BrickwareCore/include/BrickwareCore/: Body.hpp  BoxCollider.hpp  BrickwareCore.hpp  BrickwareCoreDLL.hpp  Camera.hpp  Collider.hpp  Collision.hpp  Component.hpp  Debug.hpp  DirectionalLight.hpp  FirstPersonController.hpp  FrustumCollider.hpp  Game.hpp  GameInputManager.hpp  GameObject.hpp  GameTime.hpp  Input.hpp  Light.hpp  MeshRenderer.hpp  Octree.hpp  PhysicsManager.hpp  PointLight.hpp  Rigidbody.hpp  Screen.hpp  Settings.hpp  Softbody.hpp  SphereCollider.hpp  Transform.hpp
BrickwareCore/lib/: BrickwareGraphics.lib  BrickwareGraphics.lib.REMOVED.git-id  BrickwareMath.lib  BrickwareUtils.lib
BrickwareCore/src/: Body.cpp  Bounds.cpp  BoxCollider.cpp  Camera.cpp  Collider.cpp  Collision.cpp  Component.cpp  Debug.cpp  DirectionalLight.cpp  FirstPersonController.cpp  FrustumCollider.cpp  Game.cpp  GameInputManager.cpp  GameObject.cpp  GameTime.cpp  Input.cpp  Light.cpp  Material.cpp  MaterialComponent.cpp  MaterialD3D.cpp  MaterialGL.cpp  Mesh.cpp  MeshRenderer.cpp  Octree.cpp  PhysicsManager.cpp  PointLight.cpp  Primitive.cpp  PrimitiveManager.cpp  Rigidbody.cpp  Screen.cpp  Shader.cpp  ShaderD3D.cpp  ShaderGL.cpp  Softbody.cpp  SphereCollider.cpp  Texture.cpp  TextureD3D.cpp  TextureGL.cpp  Transform.cpp  Triangle.cpp  (+2 more)
BrickwareGraphics/: BrickwareGraphics.vcxproj  BrickwareGraphics.vcxproj.filters  CMakeLists.txt
BrickwareGraphics/Debug/: Light.obj.REMOVED.git-id  Material.obj.REMOVED.git-id  MaterialD3D.obj.REMOVED.git-id  MaterialGL.obj.REMOVED.git-id  Mesh.obj.REMOVED.git-id  RenderingManager.obj.REMOVED.git-id  RenderingManagerGL.obj.REMOVED.git-id  TextureD3D.obj.REMOVED.git-id  vc120.idb
BrickwareGraphics/Debug/Brickwar.240D881D.tlog/: BrickwareGraphics.write.1u.tlog  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
BrickwareGraphics/include/: BrickwareGraphicsDLL.h  GraphicsSettings.h  Light.h  Material.h  Mesh.h  Primitive.h  PrimitiveManager.h  RenderingManager.h  Shader.h  Texture.h
BrickwareGraphics/include/BrickwareGraphics/: BrickwareGraphicsDLL.hpp  DirectionalLightInternal.hpp  GLDebugCallback.hpp  GraphicsSettings.hpp  InternalLight.hpp  Light.hpp  Material.hpp  Mesh.hpp  PointLightInternal.hpp  Primitive.hpp  PrimitiveManager.hpp  RenderTexture.hpp  RendererInfo.hpp  RenderingManager.hpp  Screen.hpp  Shader.hpp  Texture.hpp  dxerr.hpp
BrickwareGraphics/lib/: BrickwareMath.lib  BrickwareUtils.lib
BrickwareGraphics/src/: DirectionalLightInternal.cpp  DirectionalLightInternalGL.cpp  GLDebugCallback.cpp  GraphicsSettings.cpp  InternalLight.cpp  Light.cpp  Material.cpp  MaterialD3D.cpp  MaterialGL.cpp  Mesh.cpp  MeshD3D.cpp  MeshGL.cpp  PointLightInternal.cpp  PointLightInternalGL.cpp  Primitive.cpp  PrimitiveManager.cpp  PrimitiveManagerGL.cpp  RenderTexture.cpp  RenderTextureGL.cpp  RendererInfoD3D.cpp  RendererInfoGL.cpp  RenderingInfo.cpp  RenderingInfoD3D.cpp  RenderingInfoGL.cpp  RenderingManager.cpp  RenderingManagerD3D.cpp  RenderingManagerGL.cpp  Screen.cpp  Shader.cpp  ShaderD3D.cpp  ShaderGL.cpp  Texture.cpp  TextureD3D.cpp  TextureGL.cpp  dxerr.cpp
BrickwareMath/: BrickwareMath.h  BrickwareMath.vcxproj  BrickwareMath.vcxproj.filters  CMakeLists.txt
BrickwareMath/Debug/: vc120.idb
BrickwareMath/Debug/BrickwareMath.tlog/: BrickwareMath.lastbuildstate  (+7 more)
BrickwareMath/include/: Bounds.h  BrickwareMath.h  BrickwareMathDLL.h  Matrix3.h  Matrix4.h  Quaternion.h  Vector2.h  Vector3.h  Vector4.h
BrickwareMath/src/: Bounds.cpp  Matrix3.cpp  Matrix4.cpp  Quaternion.cpp  Ray.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
BrickwareTest/: BrickwareTest.vcxproj  BrickwareTest.vcxproj.filters  CMakeLists.txt  PixelShader.cso  VertexShader.cso
BrickwareTest/Debug/: vc120.idb
BrickwareTest/Shaders/: PixelShader.glsl  PixelShader.hlsl  VertexShader.glsl  VertexShader.hlsl
BrickwareTest/include/: Despawn.h  Despawn.hpp  GameManager.hpp  Spawner.h  Spawner.hpp  Spin.h  Spin.hpp  TestGame.h  TestGame.hpp
BrickwareTest/lib/: BrickwareCore.lib  BrickwareGraphics.lib  BrickwareGraphics.lib.REMOVED.git-id  BrickwareMath.lib  BrickwareUtils.lib
BrickwareTest/src/: Despawn.cpp  GameManager.cpp  Main.cpp  Spawner.cpp  Spin.cpp  TestGame.cpp
BrickwareUtils/: BrickwareUtils.vcxproj  BrickwareUtils.vcxproj.filters  CMakeLists.txt
BrickwareUtils/Debug/: vc120.idb
BrickwareUtils/include/: BrickwareUtilsDLL.h  JSONParser.h  StringUtils.h  Utils.h
BrickwareUtils/src/: Filesystem.cpp  JSONParser.cpp  Logger.cpp  StringUtils.cpp  Utils.cpp
(+781 files in other folders)
